--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             NAME</h1>
 
         <h1 id="pokeLocation"
-            class="bg-[#FDFF7A] md:bg-[#FCFFA5] lg:bg-[#FDFF7A] justify-self-center w-[90%] rounded-[15px] text-center text-[20px] row-start-2 col-start-1 col-end-3 p-4 m-2 md:row-start-2 md:col-start-1 md:col-end-2 md:p-2 md:h-[50px] lg:row-start-1 lg:col-start-3 lg:col-end-5 lg:text-[32px] lg:h-fit lg:m-4 lg:p-4">
+            class="bg-[#FDFF7A] md:bg-[#FCFFA5] lg:bg-[#FDFF7A] justify-self-center w-[90%] rounded-[15px] text-center text-[20px] row-start-2 col-start-1 col-end-3 p-4 m-2 md:row-start-2 md:col-start-1 md:col-end-2 md:p-2 md:h-fit lg:row-start-1 lg:col-start-3 lg:col-end-5 lg:text-[24px] lg:h-fit lg:m-4 lg:p-4">
             LOCATION</h1>
 
         <div
@@ -80,12 +80,12 @@
 
 
         <button id="addToFavorites"
-            class="bg-[#FDFF7A] md:bg-[#FCFFA5] text-[14px] rounded-[15px] text-center lg:w-[90%] m-4 p-4 row-start-9 col-start-1 col-end-2 md:row-start-11 md:col-start-2 md:col-end-3 md:h-[50px] md:text-[16px] lg:row-start-4 lg:row-end-4 lg:col-start-4 lg:col-end-5 lg:h-fit lg:text-[24px] lg:m-4 lg:p-4">
+            class="bg-[#FDFF7A] md:bg-[#FCFFA5] text-[14px] rounded-[15px] text-center lg:w-[85%] m-4 p-4 row-start-9 col-start-1 col-end-2 md:row-start-11 md:col-start-2 md:col-end-3 md:h-[50px] md:text-[16px] lg:row-start-4 lg:row-end-4 lg:col-start-4 lg:col-end-5 lg:h-fit lg:text-[24px] lg:m-8 lg:p-4 lg:justify-items-center">
             ADD
             TO FAVORITES</button>
 
         <button
-            class="bg-[#FDFF7A] lg:bg-[#FCFFA5] lg:bg-[] rounded-[15px] text-center text-[14px] lg:w-[90%] m-4 p-4 row-start-9 col-start-2 col-end-3 md:row-start-11 md:col-start-1 md:col-end-2 md:h-[50px] lg:row-start-4 lg:row-end-4 lg:col-start-3 lg:col-end-4 lg:h-fit lg:text-[24px] lg:m-4 lg:p-4">
+            class="bg-[#FDFF7A] lg:bg-[#FCFFA5] rounded-[15px] text-center text-[14px] lg:w-[85%] m-4 p-4 row-start-9 col-start-2 col-end-3 md:row-start-11 md:col-start-1 md:col-end-2 md:h-[50px] lg:row-start-4 lg:row-end-4 lg:col-start-3 lg:col-end-4 lg:h-fit lg:text-[24px] lg:m-8 lg:p-4">
             DISPLAY FAVORITES</button>
 
 
@@ -95,7 +95,7 @@
 
 
         <input id="pokemonName"
-            class="bg-[#FDFF7A] md:bg-[#FCFFA5] lg:bg-[#FDFF7A] justify-self-center w-[90%] row-start-11 col-start-1 col-end-3 lg:m-4 lg:p-4 p-4 rounded-[15px] text-center text-[12px] placeholder-black m-2 md:row-start-12 md:col-start-1 md:col-end-2 md:h-[50px] lg:row-start-6 lg:col-start-1 lg:col-end-3 lg:text-[32px] lg:h-fit"
+            class="bg-[#FDFF7A] md:bg-[#FCFFA5] lg:bg-[#FDFF7A] justify-self-center w-[90%] row-start-11 col-start-1 col-end-3 lg:m-4 lg:p-8 p-4 rounded-[15px] text-center text-[12px] placeholder-black m-2 md:row-start-12 md:col-start-1 md:col-end-2 md:h-fit lg:row-start-6 lg:col-start-1 lg:col-end-3 lg:text-[32px] lg:h-fit"
             type="text" placeholder="ENTER NAME OR ID # HERE">
 
         <h1 id="fetchPokemon"
