--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.0.0/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 
-<body class="bg-[#506DC4]">
+<body class="bg-[#506DC4] overflow-scroll">
     <h1 class="text-white flex justify-center text-[16px] md:text-[32px] lg:text-[36px] p-2">CHOOSE YOUR POKéMON</h1>
 
 
@@ -18,16 +18,17 @@
         class="bg-[#6CF0B5] justify-self-center w-fit h-fit ml-8 mr-8 grid grid-cols-2 grid-rows-11-auto md:grid md:grid-rows-9 md:grid-cols-2 lg:grid lg:grid-rows-6 lg:grid-cols-4">
 
         <h1 id="pokeName"
-            class="bg-[#FCFFA5] md:bg-[#FDFF7A] lg:bg-[#FCFFA5] justify-self-center w-[90%] rounded-[15px] text-center text-[20px] lg:text-[36px] row-start-1 col-start-1 col-end-3 lg:m-4 lg:p-4 p-4 m-2 md:row-start-1 md:p-2 md:col-start-1 md:col-end-2 md:h-[50px] lg:h-fit lg:col-start-1 lg:col-end-3">
+            class="bg-[#FCFFA5] md:bg-[#FDFF7A] lg:bg-[#FCFFA5] justify-self-center w-[90%] rounded-[15px] text-center text-[20px] lg:text-[36px] row-start-1 col-start-1 col-end-3 lg:m-4 lg:p-4 p-4 m-2 md:row-start-1 md:p-4 md:text-center md:col-start-1 md:col-end-2 md:h-[50px] lg:h-fit lg:col-start-1 lg:col-end-3">
             NAME</h1>
 
         <h1 id="pokeLocation"
-            class="bg-[#FDFF7A] md:bg-[#FCFFA5] lg:bg-[#FDFF7A] justify-self-center w-[90%] rounded-[15px] text-center text-[20px] row-start-2 col-start-1 col-end-3 p-4 m-2 md:row-start-2 md:col-start-1 md:col-end-2 md:p-2 md:h-fit lg:row-start-1 lg:col-start-3 lg:col-end-5 lg:text-[24px] lg:h-fit lg:m-4 lg:p-4">
+            class="bg-[#FDFF7A] md:bg-[#FCFFA5] lg:bg-[#FDFF7A] justify-self-center w-[90%] rounded-[15px] text-center text-[12px] row-start-2 col-start-1 col-end-3 p-4 m-2 md:row-start-2 md:col-start-1 md:col-end-2 md:p-2 md:h-fit lg:row-start-1 lg:col-start-3 lg:col-end-5 lg:text-[24px] lg:h-fit lg:m-4 lg:p-8">
             LOCATION</h1>
 
         <div
-            class="bg-[#FCFFA5] md:bg-[#FDFF7A] justify-self-center w-[90%] md:w-[95%] lg:w-[90%] rounded-[15px] text-[20px] row-start-3 col-start-1 col-end-3 p-4 m-2 md:row-start-3 md:row-end-4 md:col-start-1 md:p-2 md:col-span-2 md:h-[100px] lg:row-start-2 lg:col-start-1 lg:col-end-3 lg:text-[36px] lg:h-fit lg:m-4 lg:p-4">
-            <h1 class="text-left">TYPE</h1>
+            class="bg-[#FCFFA5] md:bg-[#FDFF7A] justify-self-center w-[90%] md:w-[95%] lg:w-[90%] rounded-[15px] text-[16px] row-start-3 col-start-1 col-end-3 p-4 m-2 md:row-start-3 md:row-end-4 md:col-start-1 md:p-2 md:h-fit lg:row-start-2 lg:col-start-1 lg:col-end-3 lg:text-[36px] lg:h-fit lg:m-4 lg:p-4">
+            <h1 id="pokeTypes" class="text-center">TYPE(S)</h1>
+
             <!-- <div class="flex flex-row">
                     <h1 class="bg-[#EE8130] self-center p-1 text-center border-4 m-2 w-[30%] rounded-[15px] text-[16px]">FIRE</h1>
                     <h1 class="bg-[#A8A77A] self-center p-1 text-center border-4 m-2 w-[30%] rounded-[15px] text-[16px]">NORMAL</h1>
@@ -60,8 +61,8 @@
                 src="" alt="Shiny Pokémon">
         </div>
 
-        <div
-            class="flex flex-row justify-self-center md:align-top justify-between w-[90%] m-2 row-start-6 col-start-1 col-end-3 md:row-start-6 md:row-end-7 lg:m-4 lg:row-start-4 lg:col-start-3 lg:col-end-5">
+        <div id="evolutionContainer"
+            class="flex flex-row justify-self-center md:align-top justify-between w-[90%] m-2 row-start-6 col-start-1 col-end-3 md:row-start-6 md:row-end-7 lg:m-4 lg:row-start-4 lg:col-start-3 lg:col-end-5 overflow-scroll">
             <img id="pokemonFirstEvo"
                 class="bg-[#FAD69F] w-[75px] h-[75px] md:w-[125px] md:h-[125px] lg:w-[150px] lg:h-[150px] self-center rounded-[15px]"
                 src="" alt="First Evo Pokémon">
@@ -73,6 +74,26 @@
             <img id="pokemonThirdEvo"
                 class="bg-[#FAD69F] w-[75px] h-[75px] md:w-[125px] md:h-[125px] lg:w-[150px] lg:h-[150px] self-center rounded-[15px]"
                 src="" alt="Third Evo Pokémon">
+            <i class="fa-solid fa-arrow-right self-center" style="color: #000000;"></i>
+            <img id="pokemonFourthEvo"
+                class="bg-[#FAD69F] w-[75px] h-[75px] md:w-[125px] md:h-[125px] lg:w-[150px] lg:h-[150px] self-center rounded-[15px]"
+                src="" alt="Fourth Evo Pokémon">
+            <i class="fa-solid fa-arrow-right self-center" style="color: #000000;"></i>
+            <img id="pokemonFifthEvo"
+                class="bg-[#FAD69F] w-[75px] h-[75px] md:w-[125px] md:h-[125px] lg:w-[150px] lg:h-[150px] self-center rounded-[15px]"
+                src="" alt="Fifth Evo Pokémon">
+            <i class="fa-solid fa-arrow-right self-center" style="color: #000000;"></i>
+            <img id="pokemonSixthEvo"
+                class="bg-[#FAD69F] w-[75px] h-[75px] md:w-[125px] md:h-[125px] lg:w-[150px] lg:h-[150px] self-center rounded-[15px]"
+                src="" alt="Sixth Evo Pokémon">
+            <i class="fa-solid fa-arrow-right self-center" style="color: #000000;"></i>
+            <img id="pokemonSeventhEvo"
+                class="bg-[#FAD69F] w-[75px] h-[75px] md:w-[125px] md:h-[125px] lg:w-[150px] lg:h-[150px] self-center rounded-[15px]"
+                src="" alt="Seventh Evo Pokémon">
+            <i class="fa-solid fa-arrow-right self-center" style="color: #000000;"></i>
+            <img id="pokemonEighthEvo"
+                class="bg-[#FAD69F] w-[75px] h-[75px] md:w-[125px] md:h-[125px] lg:w-[150px] lg:h-[150px] self-center rounded-[15px]"
+                src="" alt="Eighth Evo Pokémon">
         </div>
 
         <button id="displayMoves"
@@ -95,12 +116,12 @@
 
 
         <button id="randomBtn"
-            class="bg-[#FCFFA5] justify-self-center w-[90%] rounded-[15px] text-center text-[20px] row-start-10 col-start-1 col-end-3 lg:m-4 lg:p-4 p-4 m-2 md:row-start-1 md:row-end-3 md:col-start-2 md:h-[110px] md:p-2 lg:col-start-1 lg:col-end-3 lg:row-start-5 lg:row-end-6 lg:text-[36px]">
+            class="bg-[#FCFFA5] justify-self-center w-[90%] rounded-[15px] text-center text-[20px] row-start-10 col-start-1 col-end-3 lg:m-4 lg:p-4 p-4 m-2 md:row-start-1 md:row-end-2 md:col-start-2 md:h-[100px] md:p-2 lg:col-start-1 lg:col-end-3 lg:row-start-5 lg:row-end-6 lg:text-[36px]">
             RANDOMIZE</button>
 
 
         <input id="pokemonName"
-            class="bg-[#FDFF7A] md:bg-[#FCFFA5] lg:bg-[#FDFF7A] justify-self-center w-[90%] row-start-11 col-start-1 col-end-3 lg:m-4 lg:p-8 p-4 rounded-[15px] text-center text-[12px] placeholder-black m-2 md:row-start-9 md:col-start-1 md:col-end-2 md:h-fit lg:row-start-6 lg:col-start-1 lg:col-end-3 lg:text-[32px] lg:h-fit"
+            class="bg-[#FDFF7A] md:bg-[#FCFFA5] border-0 lg:bg-[#FDFF7A] justify-self-center w-[90%] row-start-11 col-start-1 col-end-3 lg:m-4 lg:p-8 p-4 rounded-[15px] text-center text-[12px] placeholder-black m-2 md:row-start-9 md:col-start-1 md:col-end-2 md:h-fit lg:row-start-6 lg:col-start-1 lg:col-end-3 lg:text-[32px] lg:h-fit"
             type="text" placeholder="ENTER NAME OR ID # HERE">
 
         <h1 id="fetchPokemon"
@@ -111,44 +132,47 @@
 
     <div id="favorites" class="fixed inset-0 bg-[#6CF0B5] bg-opacity-50 z-50 hidden">
         <div class="flex justify-center items-center h-full">
-            <div class="bg-white p-8 rounded-[15px] w-11/12 md:w-1/2">
-                <h2 class="text-xl font-bold mb-4">My Favorite Pokémon</h2>
+            <div class="bg-[#FCFFA5] p-8 rounded-[15px] w-11/12 md:w-1/2">
+                <button id="closeFavorites" class="mt-4 text-black w-16 h-16 px-4 py-2 rounded">
+                    x
+                </button>
+                <h2 class="text-xl border rounded-[15px] text-center w-fit bg-[#FDFF7A] p-4 font-bold mb-4">My Favorite
+                    Pokémon</h2>
                 <ul id="favoritesList">
                     <li class="py-2">Chimchar</li>
                     <li class="py-2">Mewtwo</li>
                     <li class="py-2">Charmander</li>
                 </ul>
-                <button id="closeFavorites" class="mt-4 bg-red-500 text-white px-4 py-2 rounded">
-                    Close
-                </button>
             </div>
         </div>
     </div>
 
     <div id="abilities" class="fixed inset-0 bg-[#6CF0B5] bg-opacity-50 z-50 hidden">
-        <div class="flex justify-center items-center h-full">
-            <div class="bg-white p-8 rounded-[15px] w-11/12 md:w-1/2">
-                <h2 class="text-xl font-bold mb-4">ABILITIES</h2>
+        <div class="flex justify-center items-center h-full overflow-hidden">
+            <div class="bg-[#FCFFA5] p-8 rounded-[15px] w-11/12 md:w-1/2">
+                <button id="closeAbilities" class="mt-4 text-black w-16 h-16 px-4 py-2 rounded">
+                    x
+                </button>
+                <h2 class="text-xl border rounded-[15px] text-center w-fit bg-[#FDFF7A] p-4 font-bold mb-4">ABILITIES
+                </h2>
                 <ul id="abilitiesList">
 
                 </ul>
-                <button id="closeAbilities" class="mt-4 bg-red-500 text-white px-4 py-2 rounded">
-                    Close
-                </button>
             </div>
         </div>
     </div>
 
-    <div id="moves" class="fixed inset-0 bg-[#6CF0B5] bg-opacity-50 z-50 hidden">
-        <div class="flex justify-center items-center h-full">
-            <div class="bg-white p-8 rounded-[15px] w-11/12 md:w-1/2">
-                <h2 class="text-xl font-bold mb-4">MOVES</h2>
+    <div id="moves" class="fixed inset-0 bg-[#6CF0B5] bg-opacity-50 z-50 hidden overflow-scroll">
+        <div class="flex justify-center items-center h-fit">
+            <div class="bg-[#FCFFA5] p-8 rounded-[15px] w-11/12 md:w-7/8 flex justify-items-center flex-col mt-4">
+                <button id="closeMoves" class="mt-4 text-black w-16 h-16 px-4 py-2 rounded">
+                    x
+                </button>
+                <h2 class="text-xl border rounded-[15px] text-center w-fit bg-[#FDFF7A] p-4 font-bold mb-4">POSSIBLE
+                    MOVES</h2>
                 <ul id="movesList">
 
                 </ul>
-                <button id="closeMoves" class="mt-4 bg-red-500 text-white px-4 py-2 rounded">
-                    Close
-                </button>
             </div>
         </div>
     </div>
